--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -35,11 +36,5 @@
             android:label="@string/app_name">
         </activity>
 
-        <activity
-            android:name=".yorum_ekle"
-            android:exported="true"
-            android:label="@string/app_name">
-        </activity>
     </application>
-
 </manifest>
